--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.10",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
