--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-WEBSITE_NODE_DEFAULT_VERSION = '~18'
+# WEBSITE_NODE_DEFAULT_VERSION = '~18'
 REACT_APP_API_ADDRESS='https://maritimeedu.azurewebsites.net/'
